@@ -1,5 +1,5 @@
 \."#############################################################################
-\."$Id: cerebro_nodelist_metric_name.3,v 1.11 2005-07-22 21:46:54 achu Exp $
+\."$Id: cerebro_nodelist_metric_name.3,v 1.12 2005-07-26 20:14:19 achu Exp $
 \."#############################################################################
 \."  Copyright (C) 2005 The Regents of the University of California.
 \."  Produced at Lawrence Livermore National Laboratory (cf, DISCLAIMER).
@@ -45,7 +45,7 @@ cerebro nodelist routines
 .sp
 .BI "int cerebro_nodelist_iterator_nodename(cerebro_nodelist_iterator_t nodelistItr, char **nodename);"
 .sp
-.BI "int cerebro_nodelist_iterator_metric_value(cerebro_nodelist_iterator_t nodelistItr, unsigned long metric_value_received_time, unsigned int *metric_value_type, unsigned int *metric_value_size, void **metric_value);"
+.BI "int cerebro_nodelist_iterator_metric_value(cerebro_nodelist_iterator_t nodelistItr, unsigned int *metric_value_received_time, unsigned int *metric_value_type, unsigned int *metric_value_size, void **metric_value);"
 .sp
 .BI "int cerebro_nodelist_iterator_next(cerebro_nodelist_iterator_t nodelistItr);"
 .sp
